# C5

./: CMakeLists.txt  README.md  config.json
include/: cryptoops.h  mainwindow.h
src/: cryptoops.cpp  main.cpp  mainwindow.cpp
ui/: mainwindow.ui
